provide the max width to avoid the image from overflowing on load

--- a/packages/blocks-next/src/styles/image-slider.scss
+++ b/packages/blocks-next/src/styles/image-slider.scss
@@ -113,4 +113,9 @@
 			border: none;
 		}
 	}
+
+	&__thumb.swiper-slide {
+		max-width: 200px;
+		margin-right: 10px;
+	}
 }
